--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # custom
 local.properties
-/.idea/
+.idea/
 
 # Compiled class file
 *.class
@@ -28,3 +28,4 @@ local.properties
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+.idea/gradle.xml
